added some ideas about blob file ...
